--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
       rel="stylesheet"
       href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBIdV5Ww0Wgri2RZ4gOKI-__PcNGwhtl58"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key="%REACT_APP_SITE_TITLE%></script>
     <title>Patrick Allan dashboard examples</title>
   </head>
   <body>
