--- a/public/index.html
+++ b/public/index.html
@@ -22,12 +22,11 @@
       rel="stylesheet"
       href="//cdn.jsdelivr.net/chartist.js/latest/chartist.min.css"
     />
-
     <script src="//cdn.jsdelivr.net/chartist.js/latest/chartist.min.js"></script>
-    <link
+    <!-- <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons"
-    />
+    /> -->
     <link
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
@@ -36,8 +35,8 @@
       rel="stylesheet"
       href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <script src="https://maps.googleapis.com/maps/api/js?key="%REACT_APP_SITE_TITLE%></script>
-    <title>Patrick Allan dashboard examples</title>
+    <script src="https://maps.googleapis.com/maps/api/js?key=%REACT_APP_GOOGLE_API_KEY%"></script>
+    <title>Exemplos REACT</title>
   </head>
   <body>
     <noscript> You need to enable JavaScript to run this app. </noscript>
